--- a/html-events/html-events.html
+++ b/html-events/html-events.html
@@ -4,11 +4,12 @@
         <title>HTML Events</title>
     </head>
 
-    <body>
+    <body class="g">
         <!-- DO NOT ADD JAVASCRIPT IN THIS FILE PLEASE :) -->
         <h1>HTML Events Lab</h1>
-
         <!-- YOUR TASK: Add a button! -->
+        <button onclick="COLOR()">!</button>
+
 
         <script src="./html-events.js"></script>
     </body>
