--- a/event-listeners/event-listeners.html
+++ b/event-listeners/event-listeners.html
@@ -7,8 +7,8 @@
 
     <body>
         <h1>Slideshow v1.0</h1>
-        <!-- Create image here! -->
-
+        <img src="mickey.jpeg" width="100">
+        
         <!-- DO NOT ADD JAVASCRIPT HERE PLEASE :) -->
 
         <script src="./event-listeners.js"></script>
